--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="add_member">Add New Members</string>
     <string name="manage_member">Manage Members</string>
     <string name="packages">Packages</string>
+    <string name="packages1">Packages</string>
     <string name="add">Add</string>
     <string name="update">Update</string>
     <string name="delete">Delete</string>
